[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Goal.gd" type="Script" id=1]
[ext_resource path="res://Images/GameArt.png" type="Texture" id=2]
[ext_resource path="res://Images/Arrow.png" type="Texture" id=3]
[ext_resource path="res://Sounds/AllCollected.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/NextLevel.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 4 )

[sub_resource type="Animation" id=2]
resource_name = "Arrow"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -11 ), Vector2( 0, -7 ), Vector2( 0, -11 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Flower:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Sounds/ShowUp")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Goal" type="Area2D"]
monitorable = false
collision_layer = 8
script = ExtResource( 1 )

[node name="Flower" type="Sprite" parent="."]
scale = Vector2( 1e-005, 1e-005 )
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 21

[node name="Arrow" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -11 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Arrow = SubResource( 2 )
anims/ShowUp = SubResource( 3 )

[node name="Sounds" type="Node2D" parent="."]

[node name="ShowUp" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 4 )

[node name="NextLevel" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = 15.0
[connection signal="body_entered" from="." to="." method="_on_Goal_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="Sounds/NextLevel" to="." method="_on_NextLevel_finished"]
